--- a/readme.rdoc
+++ b/readme.rdoc
@@ -1,19 +1,50 @@
-<p> ~Note~<br />
- Marforius-Client is a unsecured client for scriptwriters, addonwriters, and people who want to customize their client and have full<br />
- control over what it does, or exploit on private servers. The only thing you have to do to it is import your MPQ files into it.<br />
- Otherwise if you want to reduce how much size your client takes up, run the program in the /Repacker/ directory of the client's<br />
- SVN folder, this will take all the patches and consolidate them - no data is lost or deleted and no functionality is harmed.<br />
- It will clear up about 4.10~GBs of data that is useless and overwritten when the client loads it. (blizzard's patch system<br />
- is a mess.)<br />
- <br />
- <br />
- ~Known bugs~<br />
- No known bugs at this time.<br />
- <br />
- ~ Misc ~<br />
- Repacker.exe will return false positives on engines that don't use accurate scanning methods.<br />
- Please see, http://www.assembla.com/code/marforius-client/subversion/nodes?rev=8 for scans of this file.<br />
- The executables PE header (among other bloat) is missing because it is packed with FSG, which results in, apparently a false positive.</p>
+=  Marforius-Client
 
-<p> ~ Contact the Developers ~<br />
- irc.freenode.net #ArcEmu</p>
+This is a unsecured client for scriptwriters, addonwriters, and people who want to customize their client and have full 
+control over what it does, or exploit on private servers.
+
+
+= Installation & Use
+
+The only thing you have to do to it is import your MPQ files into it, and only your MPQ files.
+This means both your data and locale folder, this has <b>NOT BEEN TESTED WITH OTHER LOCALES THAN enUS</b>
+
+
+= Known bugs 
+
+No known bugs at this time. 
+
+= Misc
+  
+Repacker.exe will return false positives on engines that don't use accurate scanning methods. 
+Please see, http://www.assembla.com/code/marforius-client/subversion/nodes?rev=8 for scans of this file. 
+The executable's PE header (among other bloat) is missing because it is packed with FSG, which results in, apparently a false positive.
+
+
+= Tools
+
+A list of tools in the repo:
+
+Repacker::
+   If you want to reduce how much size your client takes up, run the program in the /Repacker/ directory of the client's folder, this will take all the patches and consolidate them - no data is lost or deleted and no functionality is harmed. It will clear up about 4.10GBs of data that is useless and overwritten when the client loads it.
+
+
+= Bugs / Feature requests
+
+If you have an idea for Marforius-Client that you want implemented or find a bug with the code, please open a ticket at https://github.com/Marforius/Marforius-Client/issues
+
+
+= License
+
+You can take credit for Marforius-Client, and in fact, I encourage you to <b>not give me any credit for this what-so-ever.</b>
+
+<b>DO NOT release this on ac-web nor mmowned/ownedcore OR ANY OTHER WEBSITE</b> without <b>branding it as your own.</b>
+
+Additional terms beyond these two clauses can be found at: http://sam.zoy.org/wtfpl
+
+
+
+= Contact the Developers  
+
+irc.freenode.net #ArcEmu
+
