--- a/readme.rdoc
+++ b/readme.rdoc
@@ -10,6 +10,18 @@ You need to simply copy all of the contents of the folder "COPY MY CONTENTS" and
 <b>NOT BEEN TESTED WITH OTHER LOCALES THAN enUS</b>
 
 
+= Why should I use this?
+
+* To reduce the client's size on disk by 4~ GBs.
+* To enable a scripter or developer to have full control of the client's interface and access secured methods in Lua.
+* Built in account selector/saver
+* Built in server selector (saver planned)
+* Built in temporary realmlist changer
+* Various bugfixes to the client.
+* Various tweaks for preformance to the client.
+
+
+
 = Known bugs 
 
 No known bugs at this time. 
@@ -36,15 +48,20 @@ If you have an idea for Marforius-Client that you want implemented or find a bug
 
 = License
 
-You can take credit for Marforius-Client, and in fact, I encourage you to <b>not give me any credit for this what-so-ever.</b>
+All files: http://creativecommons.org/licenses/by-nc-sa/3.0/us/
 
-<b>DO NOT release this on ac-web nor mmowned/ownedcore OR ANY OTHER WEBSITE</b> without <b>branding it as your own.</b>
 
-Additional terms beyond these two clauses can be found at: http://sam.zoy.org/wtfpl
+= Screenshots
+
+http://s18.postimage.org/ekub5mvwp/Wo_WScrn_Shot_012612_115746.jpg
+http://s9.postimage.org/dabjlwy4v/Wo_WScrn_Shot_012712_080027.jpg
+http://s16.postimage.org/8vvxxe591/Wo_WScrn_Shot_040612_122248.jpg
 
 
 
 = Contact the Developers  
 
 irc.rizon.net #Marforius
+
+
 
